# ROS2_Docker_UI

./: .clang-format  .gitmodules  Dockerfile  README.md  config.sh  model.config
ros2_scripts/: teleop
ros2_ws/: frames_2025-05-18_19.53.23.gv
ros2_ws/src/: README.md  config1.rviz  word_last
ros2_ws/src/install/: setup.sh
ros2_ws/src/install/waver_cv/share/waver_cv/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/src/install/waver_description/share/ament_index/resource_index/package_run_dependencies/: waver_description
ros2_ws/src/install/waver_description/share/waver_description/: local_setup.sh  package.sh
ros2_ws/src/log/: latest_build
ros2_ws/src/waver_cv/: package.xml  person_detector.py  setup.py
ros2_ws/src/waver_cv/waver_cv/: yolo_person_detector.py
scripts/: build  nvidia_run.sh  run  run.sh
workshop/: README.md
