<?xml version="1.0"?>
<package format="3">
  <name>waver_cv</name>
  <version>0.0.1</version>
  <description>Person detection node with YOLOv8 for ROS 2</description>
  <maintainer email="email@domain.com">Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>